15 July 2007

* Introduce some randomness into the lock sleep delay when waiting for mboxes.

14 July 2007

* Use mremap(2) on Linux.
 
13 July 2007

* Fix stupid bug (grr) in strb.c which caused a segfault if realloc moved the
  buffer when it was being expanded; also clean up macros a bit when here.

11 July 2007

* Add %[mail_rfc822date] which contains the mail date and time (or current date
  and time if invalid) in RFC822 format and %[rfc822date] which is the same for
  the current date/time. I probably need to stop adding tags now $() works.
* Additional example from Giorgio Lando (examples/g-lando.conf).
* Add two-digit year (year2/mail_year2) and hostname tags.
* Simplify fetching: line counting and body detection is now done globally for
  all fetch types in the mail queuing code, as is checking for empty and 
  oversize mails.
* There is now no concept of a body-less mail (m->body == -1). Mails with
  no separating blank line are assumed to be entirely body (m->body == 0),
  otherwise the body is the first byte after the separator.
* Fix a long-standing bug in openlock (mail.c): if open(2) failed, the lock
  file was not removed.
* NNTPS fetching, suggested by Maximilian Gass.
* After rethinking, remove some useless fclose error checks.

08 July 2007

* Check permissions on include files as well as main configuration file.
* First new parser bug: include files should be subject to tag replacement,
  noticed by Frank Terbeck.

05 July 2007

* Move to rewritten log.c which which makes the syslog/stderr hacks I had made
  to the old version less fugly.

02 July 2007

* If a mail has no body, insert new headers at the start instead of the end.
  This matches formail's behaviour. Requested by Giorgio Lando. Note there is
  no change to the regexp "in body" behaviour, although perhaps there should be.
* Sort out the localtime(3)/strftime(3) mess by actually reading the man page
  and time.h. This means July is now the seventh rather than sixth month. 